marges header + carte restaurant

--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -14,7 +14,7 @@
 <!--Header-->
 
 
-        <header class="">
+        <header class="header">
              <img src="images/logo/ohmyfood.png" alt="Logo" class="logo">
     </header>
 
@@ -25,8 +25,8 @@
             <div class="search_bar">
               <i class="fas fa-map-marker-alt" id="icon"></i>
               <input class="search_box" type="text" value="Paris, Belleville"></div>
-              <p class="Réservez">Réservez le menu qui vous convient</p>
-              <h1 class="Découvrez">Découvrez des restaurants d'exception sélectionnés par nos soins</h1>
+              <h1 class="Réservez">Réservez le menu qui vous convient</h1>
+              <p class="Découvrez">Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
               <button class="button_rechercher">Explorer nos restaurrants</button>
 
           </div>
@@ -37,7 +37,7 @@
         <div class="step">
           <p class="numérotation">1</p>
           <i class="fas fa-mobile-alt step_icon"></i>
-          <h3>Choisissez un restaurant</h3>
+          <h3 class="Choisissez">Choisissez un restaurant</h3>
         </div>
         <div class="step">
           <p class="numérotation">2</p>
@@ -47,7 +47,7 @@
         <div class="step">
           <p class="numérotation">3</p>
           <i class="fas fa-store step_icon"></i>
-          <h3>Dégustez au restaurant</h3>
+          <h3 class="Dégustez">Dégustez au restaurant</h3>
         </div>
 
 
@@ -61,6 +61,9 @@
           <h2 class="restaurants_title">Restaurants</h2>
           <article class="restaurant_card">
             <img class="restaurant_img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+            <div class="restaurant_desc"><h3 class="restaurant_name">La palette du goût</h3>
+            <i class="far fa-heart heart"></i></div>
+            <p class="location">Ménilmontant</p>
           </article>
           <article class="restaurant_card">
             <img class="restaurant_img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
