--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" >
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Ohmyfood! │ Commande de repas en ligne</title>
+  <title>Ohmyfood │ Commande de repas en ligne</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" media="screen and (max-width:767px)" href="css/smartphone.css">
   <script src="https://kit.fontawesome.com/50235535f0.js" crossorigin="anonymous"></script>
@@ -64,20 +64,44 @@
             <div class="restaurant_desc"><h3 class="restaurant_name">La palette du goût</h3>
             <i class="far fa-heart heart"></i></div>
             <p class="location">Ménilmontant</p>
+            <div class="Nouveau"><p>Nouveau</p></div>
           </article>
+          
           <article class="restaurant_card">
             <img class="restaurant_img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
+            <div class="restaurant_desc"><h3 class="restaurant_name">La note enchantée</h3>
+              <i class="far fa-heart heart"></i></div>
+              <p class="location">Charone</p>
+              <div class="Nouveau"><p>Nouveau</p></div>
           </article>
           <article class="restaurant_card">
             <img class="restaurant_img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
+            <div class="restaurant_desc"><h3 class="restaurant_name">À la française</h3>
+              <i class="far fa-heart heart"></i></div>
+              <p class="location">Cité rouge</p>
           </article>
           <article class="restaurant_card">
             <img class="restaurant_img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+            <div class="restaurant_desc"><h3 class="restaurant_name">Le délice des sens</h3>
+              <i class="far fa-heart heart"></i></div>
+              <p class="location">Folie-Méricourt</p>
           </article>
         </div>
       </section>
 
     </main>
+
+    <footer>
+      <img src="images/logo/logo-blanc.png" alt="Logo" class="footer_title">
+      <div class="footer_flex">
+        <i class="fas fa-utensils footer_icon"></i><p class="paragraph_flex">Proposer un restaurant</p>
+      </div>
+      <div class="footer_flex">
+        <i class="fas fa-hands-helping footer_icon2"></i><p class="paragraph_flex">Devenir partenaire</p>
+      </div>
+      <p class="footer_paragraph">Mentions légales</p>
+      <p class="footer_paragraph">Contact</p>
+    </footer>
 
   </body>
   </html>
