--- a/A_La-Française.html
+++ b/A_La-Française.html
@@ -52,52 +52,69 @@
 
       <h2>PLATS</h2>
   <div class="entree">
-  <h3>Tartare de poulpe acidulé</h3>
+  <h3>Coquilles Saint-Jacques</h3>
   <div class="flex">
-  <p class="entree_descr">Aux zestes d'orange</p>
-  <p class="price">25€</p>
+  <p class="entree_descr">Accompagnées d'une préee de panais</p>
+  <p class="price">40€</p>
 </div>
   </div>
   <div class="entree">
-    <h3>Velouté de légumes d'antan</h3>
+    <h3>Magret de canard</h3>
     <div class="flex">
-    <p class="entree_descr">Carotte, panais, topinambour</p>
+    <p class="entree_descr">Et parmentier de pommes de terres</p>
     <p class="price">35€</p>
   </div>
     </div>
     <div class="entree">
-      <h3>Soupe à l'oignon</h3>
+      <h3>Pigeonneau d'Ille-et-Vilaine</h3>
       <div class="flex">
-      <p class="entree_descr">Revisitée</p>
-      <p class="price">20€</p>
+      <p class="entree_descr">Sur son lit de gnocchis aux légumes</p>
+      <p class="price">44€</p>
     </div>
       </div>
 
-      <h2>ENTRÈES</h2>
+      <h2>DESSERTS</h2>
   <div class="entree">
-  <h3>Tartare de poulpe acidulé</h3>
+  <h3>Pétales de violettes glacés</h3>
   <div class="flex">
-  <p class="entree_descr">Aux zestes d'orange</p>
-  <p class="price">25€</p>
+  <p class="entree_descr">Et purée de noisettes</p>
+  <p class="price">18€</p>
 </div>
   </div>
   <div class="entree">
-    <h3>Velouté de légumes d'antan</h3>
+    <h3>Fondant au chocolat</h3>
     <div class="flex">
     <p class="entree_descr">Carotte, panais, topinambour</p>
-    <p class="price">35€</p>
+    <p class="price">22€</p>
   </div>
     </div>
     <div class="entree">
-      <h3>Soupe à l'oignon</h3>
+      <h3>Millefeuille croustillant</h3>
       <div class="flex">
-      <p class="entree_descr">Revisitée</p>
-      <p class="price">20€</p>
+      <p class="entree_descr">Myrtilles et pâte d'amande</p>
+      <p class="price">23€</p>
     </div>
       </div>
 
+      <div class="button">
+      <button class="button_commander">Commander</button>
+    </div>
+    
   </div>
 </main>
+
+<footer>
+      <img src="images/logo/logo-blanc.png" alt="Logo" class="footer_title">
+      <div class="footer_flex">
+        <i class="fas fa-utensils footer_icon"></i><p class="paragraph_flex">Proposer un restaurant</p>
+      </div>
+      <div class="footer_flex">
+        <i class="fas fa-hands-helping footer_icon2"></i><p class="paragraph_flex">Devenir partenaire</p>
+      </div>
+      <p class="footer_paragraph">Mentions légales</p>
+      <p class="footer_paragraph">Contact</p>
+    </footer>
+
 
 </body>
 
