--- a/A_La-Française.html
+++ b/A_La-Française.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" >
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Ohmyfood │ Commande de repas en ligne</title>
-  <link rel="stylesheet" media="screen and (max-width:767px)" href="css/menusmartphone.css">
+  <link rel="stylesheet" href="css/menusmartphone.css">
   <script src="https://kit.fontawesome.com/50235535f0.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -26,8 +26,9 @@
     <div class="flex_h1">
   <h1>À la française</h1>
   <i class="far fa-heart heart"></i>
-  </div>
-  <h2>ENTRÈES</h2>
+  </div> 
+  <h2>ENTRÉES</h2>
+  <hr>
   <div class="entree">
   <h3>Tartare de poulpe acidulé</h3>
   <div class="flex">
@@ -51,6 +52,7 @@
       </div>
 
       <h2>PLATS</h2>
+      <hr>
   <div class="entree">
   <h3>Coquilles Saint-Jacques</h3>
   <div class="flex">
@@ -74,6 +76,7 @@
       </div>
 
       <h2>DESSERTS</h2>
+      <hr>
   <div class="entree">
   <h3>Pétales de violettes glacés</h3>
   <div class="flex">
