--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -43,9 +43,9 @@
           <i class="fas fa-list-ul step_icon"></i>
           <h3>Composez votre menu</h3>
         </div>
-        <div class="step">
+        <div class="step purple_step">
           <p class="numérotation">3</p>
-          <i class="fas fa-store step_icon"></i>
+          <i class="fas fa-store step_icon" id="purple_icon"></i>
           <h3 class="Dégustez">Dégustez au restaurant</h3>
         </div>
 
@@ -58,12 +58,13 @@
       <section class="restaurants">
         <div class="all_restaurants">
           <h2 class="restaurants_title">Restaurants</h2>
-          <article class="restaurant_card">
+          
+          <article class="restaurant_card"><a href="#">
             <img class="restaurant_img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
             <div class="restaurant_desc"><h3 class="restaurant_name">La palette du goût</h3>
             <i class="far fa-heart heart"></i></div>
             <p class="location">Ménilmontant</p>
-            <div class="Nouveau"><p>Nouveau</p></div>
+            <div class="Nouveau"><p>Nouveau</p></div></a>
           </article>
           
           <article class="restaurant_card">
