--- a/A_La-Française.html
+++ b/A_La-Française.html
@@ -29,21 +29,22 @@
   </div> 
   <h2>ENTRÉES</h2>
   <hr>
-  <div class="entree">
-  <h3>Tartare de poulpe acidulé</h3>
+  <div class="plat" id="plat1">
+    <input type="checkbox" class="hidden">
+    <label for="tartare"><h3>Tartare de poulpe acidulé</h3>
   <div class="flex">
   <p class="entree_descr">Aux zestes d'orange</p>
-  <p class="price">25€</p>
+  <p class="price">25€</p></label>
 </div>
   </div>
-  <div class="entree">
+  <div class="plat" id="plat2">
     <h3>Velouté de légumes d'antan</h3>
     <div class="flex">
     <p class="entree_descr">Carotte, panais, topinambour</p>
     <p class="price">35€</p>
   </div>
     </div>
-    <div class="entree">
+    <div class="plat" id="plat3">
       <h3>Soupe à l'oignon</h3>
       <div class="flex">
       <p class="entree_descr">Revisitée</p>
@@ -53,21 +54,21 @@
 
       <h2>PLATS</h2>
       <hr>
-  <div class="entree">
+  <div class="plat">
   <h3>Coquilles Saint-Jacques</h3>
   <div class="flex">
   <p class="entree_descr">Accompagnées d'une préee de panais</p>
   <p class="price">40€</p>
 </div>
   </div>
-  <div class="entree">
+  <div class="plat">
     <h3>Magret de canard</h3>
     <div class="flex">
     <p class="entree_descr">Et parmentier de pommes de terres</p>
     <p class="price">35€</p>
   </div>
     </div>
-    <div class="entree">
+    <div class="plat">
       <h3>Pigeonneau d'Ille-et-Vilaine</h3>
       <div class="flex">
       <p class="entree_descr">Sur son lit de gnocchis aux légumes</p>
@@ -77,21 +78,21 @@
 
       <h2>DESSERTS</h2>
       <hr>
-  <div class="entree">
+  <div class="plat">
   <h3>Pétales de violettes glacés</h3>
   <div class="flex">
   <p class="entree_descr">Et purée de noisettes</p>
   <p class="price">18€</p>
 </div>
   </div>
-  <div class="entree">
+  <div class="plat">
     <h3>Fondant au chocolat</h3>
     <div class="flex">
     <p class="entree_descr">Carotte, panais, topinambour</p>
     <p class="price">22€</p>
   </div>
     </div>
-    <div class="entree">
+    <div class="plat">
       <h3>Millefeuille croustillant</h3>
       <div class="flex">
       <p class="entree_descr">Myrtilles et pâte d'amande</p>
