animation coeur premier essai

--- a/A_La-Française.html
+++ b/A_La-Française.html
@@ -30,11 +30,10 @@
   <h2>ENTRÉES</h2>
   <hr>
   <div class="plat" id="plat1">
-    <input type="checkbox" class="hidden">
-    <label for="tartare"><h3>Tartare de poulpe acidulé</h3>
+    <h3>Tartare de poulpe acidulé</h3>
   <div class="flex">
   <p class="entree_descr">Aux zestes d'orange</p>
-  <p class="price">25€</p></label>
+  <p class="price">25€</p>
 </div>
   </div>
   <div class="plat" id="plat2">
