--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -61,10 +61,10 @@
           
           <article class="restaurant_card"><a href="#">
             <img class="restaurant_img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
-            <div class="restaurant_desc"><h3 class="restaurant_name">La palette du goût</h3>
-            <i class="far fa-heart heart"></i></div>
+            <div class="restaurant_desc"><h3 class="restaurant_name">La palette du goût</h3></a>
+            <i class="far fa-heart heart"></i> <i class="fas fa-heart heart2"></i></div>
             <p class="location">Ménilmontant</p>
-            <div class="Nouveau"><p>Nouveau</p></div></a>
+            <div class="Nouveau"><p>Nouveau</p></div>
           </article>
           
           <article class="restaurant_card">
