--- a/A_La-Française.html
+++ b/A_La-Française.html
@@ -29,13 +29,17 @@
   </div> 
   <h2>ENTRÉES</h2>
   <hr>
+
   <div class="plat" id="plat1">
+    <div class="card_content">
     <h3>Tartare de poulpe acidulé</h3>
   <div class="flex">
   <p class="entree_descr">Aux zestes d'orange</p>
   <p class="price">25€</p>
-</div>
+ </div></div>
+ <div class="animation_menu"><i class="fas fa-check-circle check"></i></div>
   </div>
+
   <div class="plat" id="plat2">
     <h3>Velouté de légumes d'antan</h3>
     <div class="flex">
@@ -43,6 +47,7 @@
     <p class="price">35€</p>
   </div>
     </div>
+    
     <div class="plat" id="plat3">
       <h3>Soupe à l'oignon</h3>
       <div class="flex">
@@ -54,11 +59,13 @@
       <h2>PLATS</h2>
       <hr>
   <div class="plat">
+    <div class="card_content">
   <h3>Coquilles Saint-Jacques</h3>
   <div class="flex">
   <p class="entree_descr">Accompagnées d'une préee de panais</p>
-  <p class="price">40€</p>
+  <p class="price">40€</p></div>
 </div>
+<div class="animation_menu"><i class="fas fa-check-circle check"></i></div>
   </div>
   <div class="plat">
     <h3>Magret de canard</h3>
