--- a/A_La-Française.html
+++ b/A_La-Française.html
@@ -25,7 +25,7 @@
   <div class="menu">
     <div class="flex_h1">
   <h1>À la française</h1>
-  <i class="far fa-heart heart"></i>
+  <i class="far fa-heart heart"></i><i class="fas fa-heart heart2"></i>
   </div> 
   <h2>ENTRÉES</h2>
   <hr>
@@ -35,25 +35,29 @@
     <h3>Tartare de poulpe acidulé</h3>
   <div class="flex">
   <p class="entree_descr">Aux zestes d'orange</p>
-  <p class="price">25€</p>
+  <span class="price">25€</span>
  </div></div>
- <div class="animation_menu"><i class="fas fa-check-circle check"></i></div>
+ <div class="animation_menu"><i class="fas fa-check-circle check"></i> </div>
   </div>
 
   <div class="plat" id="plat2">
+    <div class="card_content">
     <h3>Velouté de légumes d'antan</h3>
     <div class="flex">
     <p class="entree_descr">Carotte, panais, topinambour</p>
-    <p class="price">35€</p>
-  </div>
+    <span class="price">35€</span>
+  </div></div>
+  <div class="animation_menu"><i class="fas fa-check-circle check"></i> </div>
     </div>
     
     <div class="plat" id="plat3">
+      <div class="card_content">
       <h3>Soupe à l'oignon</h3>
       <div class="flex">
       <p class="entree_descr">Revisitée</p>
-      <p class="price">20€</p>
-    </div>
+      <span class="price">20€</span>
+    </div></div>
+    <div class="animation_menu"><i class="fas fa-check-circle check"></i> </div>
       </div>
 
       <h2>PLATS</h2>
@@ -63,47 +67,56 @@
   <h3>Coquilles Saint-Jacques</h3>
   <div class="flex">
   <p class="entree_descr">Accompagnées d'une préee de panais</p>
-  <p class="price">40€</p></div>
-</div>
+  <span class="price">40€</span>
+</div></div>
 <div class="animation_menu"><i class="fas fa-check-circle check"></i></div>
   </div>
   <div class="plat">
+    <div class="card_content">
     <h3>Magret de canard</h3>
     <div class="flex">
     <p class="entree_descr">Et parmentier de pommes de terres</p>
-    <p class="price">35€</p>
-  </div>
+    <span class="price">35€</span>
+  </div></div>
+  <div class="animation_menu"><i class="fas fa-check-circle check"></i> </div>
     </div>
     <div class="plat">
+      <div class="card_content">
       <h3>Pigeonneau d'Ille-et-Vilaine</h3>
       <div class="flex">
       <p class="entree_descr">Sur son lit de gnocchis aux légumes</p>
-      <p class="price">44€</p>
-    </div>
+      <span class="price">44€</span>
+    </div></div>
+    <div class="animation_menu"><i class="fas fa-check-circle check"></i> </div>
       </div>
 
       <h2>DESSERTS</h2>
       <hr>
   <div class="plat">
+    <div class="card_content">
   <h3>Pétales de violettes glacés</h3>
   <div class="flex">
   <p class="entree_descr">Et purée de noisettes</p>
-  <p class="price">18€</p>
-</div>
+  <span class="price">18€</span>
+</div></div>
+<div class="animation_menu"><i class="fas fa-check-circle check"></i> </div>
   </div>
   <div class="plat">
+    <div class="card_content">
     <h3>Fondant au chocolat</h3>
     <div class="flex">
     <p class="entree_descr">Carotte, panais, topinambour</p>
-    <p class="price">22€</p>
-  </div>
+    <span class="price">22€</span>
+  </div></div>
+  <div class="animation_menu"><i class="fas fa-check-circle check"></i> </div>
     </div>
-    <div class="plat">
+    <div class="plat"><div class="card_content">
       <h3>Millefeuille croustillant</h3>
       <div class="flex">
       <p class="entree_descr">Myrtilles et pâte d'amande</p>
-      <p class="price">23€</p>
-    </div>
+      <span class="price">23€</span>
+    </div></div>
+    <div class="animation_menu"><i class="fas fa-check-circle check"></i> </div>
       </div>
 
       <div class="button">
@@ -114,7 +127,7 @@
 </main>
 
 <footer>
-      <img src="images/logo/logo-blanc.png" alt="Logo" class="footer_title">
+      <h1 class="logo_title">ohmyfood</h1>
       <div class="footer_flex">
         <i class="fas fa-utensils footer_icon"></i><p class="paragraph_flex">Proposer un restaurant</p>
       </div>
