--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 
-  <div class="loader"></div> 
+  
 
 <!--Header-->
 
 
-        <header class="header">
+        <header class="header"><div class="loader"></div> 
              <img src="images/logo/ohmyfood.png" alt="Logo" class="logo">
     </header>
 
@@ -61,28 +61,28 @@
           <h2 class="restaurants_title">Restaurants</h2>
           
           <article class="restaurant_card"><a href="#">
-            <img class="restaurant_img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
-            <div class="restaurant_desc"><h3 class="restaurant_name">La palette du goût</h3></a>
+            <img class="restaurant_img" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"></a>
+            <div class="restaurant_desc"><h3 class="restaurant_name">La palette du goût</h3>
             <i class="far fa-heart heart"></i> <i class="fas fa-heart heart2"></i></div>
             <p class="location">Ménilmontant</p>
             <div class="Nouveau"><p>Nouveau</p></div>
           </article>
           
-          <article class="restaurant_card">
-            <img class="restaurant_img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg">
+          <article class="restaurant_card"><a href="#">
+            <img class="restaurant_img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"></a>
             <div class="restaurant_desc"><h3 class="restaurant_name">La note enchantée</h3>
               <i class="far fa-heart heart"></i></div>
               <p class="location">Charone</p>
               <div class="Nouveau"><p>Nouveau</p></div>
           </article>
-          <article class="restaurant_card">
-            <img class="restaurant_img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
+          <article class="restaurant_card"><a href="#">
+            <img class="restaurant_img" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"></a>
             <div class="restaurant_desc"><h3 class="restaurant_name">À la française</h3>
               <i class="far fa-heart heart"></i></div>
               <p class="location">Cité rouge</p>
           </article>
-          <article class="restaurant_card">
-            <img class="restaurant_img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
+          <article class="restaurant_card"><a href="#">
+            <img class="restaurant_img" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"></a>
             <div class="restaurant_desc"><h3 class="restaurant_name">Le délice des sens</h3>
               <i class="far fa-heart heart"></i></div>
               <p class="location">Folie-Méricourt</p>
@@ -93,7 +93,7 @@
     </main>
 
     <footer>
-      <img src="images/logo/logo-blanc.png" alt="Logo" class="footer_title">
+      <h1 class="logo_title">ohmyfood</h1>
       <div class="footer_flex">
         <i class="fas fa-utensils footer_icon"></i><p class="paragraph_flex">Proposer un restaurant</p>
       </div>
