menu version desktop

--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Ohmyfood │ Commande de repas en ligne</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet"  media="screen and (min-width:767px) "href="css/Desktopaccueil.css">
   <script src="https://kit.fontawesome.com/50235535f0.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -25,8 +26,8 @@
             <div class="search_bar">
               <i class="fas fa-map-marker-alt" id="icon"></i>
               <input class="search_box" type="text" value="Paris, Belleville"></div>
-              <h1 class="Réservez">Réservez le menu qui vous convient</h1>
-              <p class="Découvrez">Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
+              <h1 class="Reservez">Réservez le menu qui vous convient</h1>
+              <p class="Decouvrez">Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
               <button class="button_rechercher">Explorer nos restaurrants</button>
 
           </div>
