--- a/A_La-Française.html
+++ b/A_La-Française.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8" >
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Ohmyfood │ Commande de repas en ligne</title>
-  <link rel="stylesheet" href="css/menusmartphone.css">
+  <link rel="stylesheet"  href="css/menusmartphone.css">
+  <link rel="stylesheet"  media="screen and (min-width:767px) "href="css/Desktopmenu.css">
   <script src="https://kit.fontawesome.com/50235535f0.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -27,9 +28,8 @@
   <h1>À la française</h1>
   <i class="far fa-heart heart"></i><i class="fas fa-heart heart2"></i>
   </div> 
-  <h2>ENTRÉES</h2>
-  <hr>
-
+  <h2 class="entrees_title">ENTRÉES<hr></h2>
+  
   <div class="plat" id="plat1">
     <div class="card_content">
     <h3>Tartare de poulpe acidulé</h3>
@@ -60,9 +60,9 @@
     <div class="animation_menu"><i class="fas fa-check-circle check"></i> </div>
       </div>
 
-      <h2>PLATS</h2>
-      <hr>
-  <div class="plat">
+      <h2 class="plats_title">PLATS<hr></h2>
+      
+  <div class="plat" id="plat1">
     <div class="card_content">
   <h3>Coquilles Saint-Jacques</h3>
   <div class="flex">
@@ -71,7 +71,7 @@
 </div></div>
 <div class="animation_menu"><i class="fas fa-check-circle check"></i></div>
   </div>
-  <div class="plat">
+  <div class="plat" id="plat2">
     <div class="card_content">
     <h3>Magret de canard</h3>
     <div class="flex">
@@ -80,7 +80,7 @@
   </div></div>
   <div class="animation_menu"><i class="fas fa-check-circle check"></i> </div>
     </div>
-    <div class="plat">
+    <div class="plat" id="plat3">
       <div class="card_content">
       <h3>Pigeonneau d'Ille-et-Vilaine</h3>
       <div class="flex">
@@ -90,9 +90,9 @@
     <div class="animation_menu"><i class="fas fa-check-circle check"></i> </div>
       </div>
 
-      <h2>DESSERTS</h2>
-      <hr>
-  <div class="plat">
+      <h2 class="desserts_title">DESSERTS<hr></h2>
+      
+  <div class="plat" id="plat1">
     <div class="card_content">
   <h3>Pétales de violettes glacés</h3>
   <div class="flex">
@@ -101,7 +101,7 @@
 </div></div>
 <div class="animation_menu"><i class="fas fa-check-circle check"></i> </div>
   </div>
-  <div class="plat">
+  <div class="plat" id="plat2">
     <div class="card_content">
     <h3>Fondant au chocolat</h3>
     <div class="flex">
@@ -110,7 +110,7 @@
   </div></div>
   <div class="animation_menu"><i class="fas fa-check-circle check"></i> </div>
     </div>
-    <div class="plat"><div class="card_content">
+    <div class="plat" id="plat3"><div class="card_content">
       <h3>Millefeuille croustillant</h3>
       <div class="flex">
       <p class="entree_descr">Myrtilles et pâte d'amande</p>
