--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Ohmyfood │ Commande de repas en ligne</title>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet"  media="screen and (min-width:767px) "href="css/Desktopaccueil.css">
+  <link rel="stylesheet"  media="screen and (min-width:767px)" href="css/Desktopaccueil.css">
   <script src="https://kit.fontawesome.com/50235535f0.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -36,17 +36,17 @@
       <section class="Fonctionnement_du_site">
         <h2 class="Fonctionnement">Fonctionnement</h2>
         <div class="step">
-          <p class="numérotation">1</p>
+          <p class="numerotation">1</p>
           <i class="fas fa-mobile-alt step_icon"></i>
           <h3 class="Choisissez">Choisissez un restaurant</h3>
         </div>
         <div class="step">
-          <p class="numérotation">2</p>
+          <p class="numerotation">2</p>
           <i class="fas fa-list-ul step_icon"></i>
           <h3>Composez votre menu</h3>
         </div>
         <div class="step purple_step">
-          <p class="numérotation">3</p>
+          <p class="numerotation">3</p>
           <i class="fas fa-store step_icon" id="purple_icon"></i>
           <h3 class="Dégustez">Dégustez au restaurant</h3>
         </div>
@@ -72,20 +72,20 @@
           <article class="restaurant_card"><a href="#">
             <img class="restaurant_img" alt="assiette d'un plat en sauce" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"></a>
             <div class="restaurant_desc"><h3 class="restaurant_name">La note enchantée</h3>
-              <i class="far fa-heart heart"></i></div>
+              <i class="far fa-heart heart"></i> <i class="fas fa-heart heart2"></i></div>
               <p class="location">Charone</p>
               <div class="Nouveau"><p>Nouveau</p></div>
           </article>
           <article class="restaurant_card"><a href="#">
             <img class="restaurant_img" alt="assiette contenant une tartine avec de la salade" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"></a>
             <div class="restaurant_desc"><h3 class="restaurant_name">À la française</h3>
-              <i class="far fa-heart heart"></i></div>
+              <i class="far fa-heart heart"></i> <i class="fas fa-heart heart2"></i></div>
               <p class="location">Cité rouge</p>
           </article>
           <article class="restaurant_card"><a href="#">
             <img class="restaurant_img" alt="plat en sauce" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"></a>
             <div class="restaurant_desc"><h3 class="restaurant_name">Le délice des sens</h3>
-              <i class="far fa-heart heart"></i></div>
+              <i class="far fa-heart heart"></i><i class="fas fa-heart heart2"></i></div>
               <p class="location">Folie-Méricourt</p>
           </article>
         </div>
