--- a/A_La-Française.html
+++ b/A_La-Française.html
@@ -28,14 +28,14 @@
   <h1>À la française</h1>
   <i class="far fa-heart heart"></i><i class="fas fa-heart heart2"></i>
   </div> 
-  <h2 class="entrees_title">ENTRÉES</h2><hr>
+  <h2 class="entrees_title">ENTRÉES</h2><hr class="hr1">
   
   <div class="plat plat1">
     <div class="card_content">
     <h3>Tartare de poulpe acidulé</h3>
   <div class="flex">
   <p class="entree_descr">Aux zestes d'orange</p>
-  <span class="price">25€</span>
+  <p class="price">25€</p>
  </div></div>
  <div class="animation_menu"><i class="fas fa-check-circle check"></i> </div>
   </div>
@@ -45,7 +45,7 @@
     <h3>Velouté de légumes d'antan</h3>
     <div class="flex">
     <p class="entree_descr">Carotte, panais, topinambour</p>
-    <span class="price">35€</span>
+    <p class="price">35€</p>
   </div></div>
   <div class="animation_menu"><i class="fas fa-check-circle check"></i> </div>
     </div>
@@ -55,19 +55,19 @@
       <h3>Soupe à l'oignon</h3>
       <div class="flex">
       <p class="entree_descr">Revisitée</p>
-      <span class="price">20€</span>
+      <p class="price">20€</p>
     </div></div>
     <div class="animation_menu"><i class="fas fa-check-circle check"></i> </div>
       </div>
 
-      <h2 class="plats_title">PLATS</h2><hr>
+      <h2 class="plats_title">PLATS</h2><hr class="hr2">
       
   <div class="plat plat1">
     <div class="card_content">
   <h3>Coquilles Saint-Jacques</h3>
   <div class="flex">
   <p class="entree_descr">Accompagnées d'une préee de panais</p>
-  <span class="price">40€</span>
+  <p class="price">40€</p>
 </div></div>
 <div class="animation_menu"><i class="fas fa-check-circle check"></i></div>
   </div>
@@ -76,7 +76,7 @@
     <h3>Magret de canard</h3>
     <div class="flex">
     <p class="entree_descr">Et parmentier de pommes de terres</p>
-    <span class="price">35€</span>
+    <p class="price">35€</p>
   </div></div>
   <div class="animation_menu"><i class="fas fa-check-circle check"></i> </div>
     </div>
@@ -85,36 +85,36 @@
       <h3>Pigeonneau d'Ille-et-Vilaine</h3>
       <div class="flex">
       <p class="entree_descr">Sur son lit de gnocchis aux légumes</p>
-      <span class="price">44€</span>
+      <p class="price">44€</p>
     </div></div>
     <div class="animation_menu"><i class="fas fa-check-circle check"></i> </div>
       </div>
 
-      <h2 class="desserts_title">DESSERTS</h2><hr>
+      <h2 class="desserts_title">DESSERTS</h2><hr class="hr3">
       
-  <div class="plat plat1">
+  <div class="plat Dessertplat1">
     <div class="card_content">
   <h3>Pétales de violettes glacés</h3>
   <div class="flex">
   <p class="entree_descr">Et purée de noisettes</p>
-  <span class="price">18€</span>
+  <p class="price">18€</p>
 </div></div>
 <div class="animation_menu"><i class="fas fa-check-circle check"></i> </div>
   </div>
-  <div class="plat plat2">
+  <div class="plat Dessertplat2">
     <div class="card_content">
     <h3>Fondant au chocolat</h3>
     <div class="flex">
     <p class="entree_descr">Carotte, panais, topinambour</p>
-    <span class="price">22€</span>
+    <p class="price">22€</p>
   </div></div>
   <div class="animation_menu"><i class="fas fa-check-circle check"></i> </div>
     </div>
-    <div class="plat plat3"><div class="card_content">
+    <div class="plat Dessertplat3"><div class="card_content">
       <h3>Millefeuille croustillant</h3>
       <div class="flex">
       <p class="entree_descr">Myrtilles et pâte d'amande</p>
-      <span class="price">23€</span>
+      <p class="price">23€</p>
     </div></div>
     <div class="animation_menu"><i class="fas fa-check-circle check"></i> </div>
       </div>
