--- a/La_Note_Enchantée.html
+++ b/La_Note_Enchantée.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Ohmyfood │ Commande de repas en ligne</title>
   <link rel="stylesheet"  href="css/menusmartphone.css">
+  <link rel="stylesheet"  href="css/LaNoteEnchantee_smartphone.css">
   <link rel="stylesheet"  media="screen and (min-width:767px)" href="css/Desktopmenu.css">
+  <link rel="stylesheet"  media="screen and (min-width:767px)" href="css/LaNoteEnchantee_Desktop.css">
   <script src="https://kit.fontawesome.com/50235535f0.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -62,7 +64,7 @@
 
       <div class="plat plat4">
         <div class="card_content">
-        <h3>foie gras de canard cuit entier</h3>
+        <h3>Foie gras de canard cuit entier</h3>
         <div class="flex">
         <p class="entree_descr">Marinée aux zestes d'orange</p>
         <p class="price">20€</p>
