--- a/La_Note_Enchantée.html
+++ b/La_Note_Enchantée.html
@@ -17,7 +17,7 @@
 
 
 <header class="header">
-    <i class="fas fa-arrow-left arrow"></i>
+  <a href="ohmyfood.html"><i class="fas fa-arrow-left arrow"></i></a>
     <img src="images/logo/ohmyfood.png" alt="Logo" class="logo">
 </header>
 
