--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -61,7 +61,7 @@
         <div class="all_restaurants">
           <h2 class="restaurants_title">Restaurants</h2>
           
-          <article class="restaurant_card"><a href="#">
+          <article class="restaurant_card"><a href="La_palette_du_goût.html">
             <img class="restaurant_img" alt="Assiette de poisson" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"></a>
             <div class="restaurant_desc"><h3 class="restaurant_name">La palette du goût</h3>
             <i class="far fa-heart heart"></i> <i class="fas fa-heart heart2"></i></div>
@@ -69,20 +69,20 @@
             <div class="Nouveau"><p>Nouveau</p></div>
           </article>
           
-          <article class="restaurant_card"><a href="#">
+          <article class="restaurant_card"><a href="La_Note_Enchantée.html">
             <img class="restaurant_img" alt="assiette d'un plat en sauce" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"></a>
             <div class="restaurant_desc"><h3 class="restaurant_name">La note enchantée</h3>
               <i class="far fa-heart heart"></i> <i class="fas fa-heart heart2"></i></div>
               <p class="location">Charone</p>
               <div class="Nouveau"><p>Nouveau</p></div>
           </article>
-          <article class="restaurant_card"><a href="#">
+          <article class="restaurant_card"><a href="A_La-Française.html">
             <img class="restaurant_img" alt="assiette contenant une tartine avec de la salade" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"></a>
             <div class="restaurant_desc"><h3 class="restaurant_name">À la française</h3>
               <i class="far fa-heart heart"></i> <i class="fas fa-heart heart2"></i></div>
               <p class="location">Cité rouge</p>
           </article>
-          <article class="restaurant_card"><a href="#">
+          <article class="restaurant_card"><a href="Le_délice_des_sens.html">
             <img class="restaurant_img" alt="plat en sauce" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"></a>
             <div class="restaurant_desc"><h3 class="restaurant_name">Le délice des sens</h3>
               <i class="far fa-heart heart"></i><i class="fas fa-heart heart2"></i></div>
