--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -27,7 +27,7 @@
               <i class="fas fa-map-marker-alt" id="icon"></i>
               <input class="search_box" type="text" value="Paris, Belleville"></div>
               <h1 class="Reservez">Réservez le menu qui vous convient</h1>
-              <p class="Decouvrez">Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
+              <p class="Decouvrez">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
               <button class="button_rechercher">Explorer nos restaurrants</button>
 
           </div>
