correction menu section classe par id

--- a/A_La-Française.html
+++ b/A_La-Française.html
@@ -20,7 +20,7 @@
   
   <img class="menu_img" alt="assiette contenant une tartine avec de la salade" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
 
-  <section class="menu">
+  <section id="menu">
   <div class="menu">
     <div class="flex_h1">
       <h1>À la française</h1>
